# abm

./: .gitignore  NewPlan.md  README.md  TODO.md  TODO_new.md  come-funziona-il-modello.md  feedback.md  main.py  notes.md  og.md  parameters.md  plan.md  policy_analysis.sh  pyproject.toml  reading.md  requirements.txt  sa.md  sensitivity.sh  sensitivity_analysis.sh
code/: .gitignore  TODO.md  agents.py  config.py  config.toml  credit.py  expectations.py  generate_report.py  markets.py  metrics.py  model.py  plotting.py  policies.py  policy_analysis.py  pres_plot_rate.py  properties.py  run.py  run_large.py  utility.py  valuation.py  viz.py
code/archive/: viz.py
code/core/: agents.py  credit.py  expectations.py  markets.py  model.py  utility.py  valuation.py
code/plotting/: dashboard_viz.py  plot_experiment.py  plot_run.py  policy_analysis.ipynb  sensitivity.ipynb  single_run.ipynb
code/sensitivity/: __main__.py  analysis.py  main.py
code/settings/: config.py  metrics.py  policies.py  policy_config.py  sensitivity_config.yaml
code/test/: test_credit.py  test_expectations.py  test_markets.py  test_model_regression.py  test_utility.py  test_valuation.py
code/tests/: test_credit.py  test_expectations.py  test_markets.py  test_model_regression.py  test_utility.py  test_valuation.py
sensitivity/: __main__.py  analysis.py  config.yaml  main.py
test/: test_accounting.py  test_credit.py  test_expectations.py  test_markets.py  test_model_regression.py  test_utility.py  test_valuation.py
tests/: test_accounting.py  test_credit.py
