[project]
name = "abm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.2.1",
    "black>=26.5.1",
    "git-fame>=3.1.2",
    "matplotlib>=3.10.9",
    "mesa>=3.5.1",
    "networkx>=3.6.1", # required: mesa imports it unconditionally but only declares it as an optional extra
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.0",
    "salib>=1.5.2",
    "solara>=1.57.4",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.black]
line-length = 100
target-version = ["py313"]
